--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,4 +1,5 @@
-name: Trigger Selenium Tests in QA Repo
+# .github/workflows/trigger-tests.yml
+name: Trigger Selenium Tests in Other Repo
 
 on:
   push:
@@ -8,12 +9,10 @@ on:
 jobs:
   trigger-tests:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Trigger Selenium Test Repo
-        run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.Trigger_Selenium_Workflow_PAT }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/YOUR-USERNAME/selenium-tests/dispatches \
-            -d '{"event_type":"run-selenium"}'
+      - name: Trigger Selenium Test Workflow
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.Trigger_Selenium_Workflow_PAT }}
+          repository: Shubham-bi/selenium-cicd
+          event-type: run-selenium-tests
