--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -14,5 +14,5 @@ jobs:
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.ciciToken}}
-          repository: ShubhamK-STPL/selenium-cicd-tests
+          repository: ShubhamK-STPL/my_cicd
           event-type: run-selenium-tests
