--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Trigger Selenium Test Workflow
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.ciciToken}}
+          token: ${{ secrets.my_cicd_token}}
           repository: ShubhamK-STPL/my_cicd
           event-type: run-selenium-tests
