yaml updaeted again

--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,6 +1,4 @@
-# main-app/.github/workflows/trigger-and-check.yml
-
-name: Trigger and Verify Selenium Tests
+name: Trigger Selenium Tests and Fetch Result
 
 on:
   push:
@@ -10,33 +8,32 @@ on:
 jobs:
   trigger-tests:
     runs-on: ubuntu-latest
+
     steps:
-      - name: 🧪 Trigger Selenium Test Workflow
+      - name: 🚀 Trigger Selenium Test Workflow
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.Access_Token }}
           repository: ShubhamK-STPL/selenium-cicd-tests
           event-type: run-selenium-tests
 
-  check-test-status:
-    needs: trigger-tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🕒 Wait for tests to complete
-        run: sleep 60  # Wait for 1 minute (adjust if needed)
+      - name: ⏱️ Wait for Selenium Test Run to Complete
+        run: sleep 60  # wait 60 seconds before trying to fetch artifact
 
       - name: 📦 Download Selenium Status File
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: run-selenium-tests.yml
           name: selenium-test-status
           repo: ShubhamK-STPL/selenium-cicd-tests
           github_token: ${{ secrets.Access_Token }}
+          path: downloaded-status
 
       - name: ✅ Check test status
         run: |
-          cat status.txt
-          if grep -q "FAILURE" status.txt; then
+          echo "Downloaded status.txt contents:"
+          cat downloaded-status/status.txt
+
+          if grep -q "FAILURE" downloaded-status/status.txt; then
             echo "❌ Selenium tests failed."
             exit 1
           else
