--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,4 +1,4 @@
-name: Trigger Selenium Tests and Fetch Result
+name: Trigger & Validate Selenium Tests
 
 on:
   push:
@@ -6,21 +6,28 @@ on:
       - main
 
 jobs:
-  trigger-tests:
+  trigger-selenium:
+    name: 🚀 Trigger Selenium Workflow
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🚀 Trigger Selenium Test Workflow
+      - name: 🔐 Trigger Selenium Test Workflow
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.Access_Token }}
           repository: ShubhamK-STPL/selenium-cicd-tests
           event-type: run-selenium-tests
 
-      - name: ⏱️ Wait for Selenium Test Run to Complete
-        run: sleep 60  # wait 60 seconds before trying to fetch artifact
+  wait-and-check:
+    name: ✅ Wait & Fetch Selenium Results
+    runs-on: ubuntu-latest
+    needs: trigger-selenium
 
-      - name: 📦 Download Selenium Status File
+    steps:
+      - name: ⏳ Wait for Selenium tests to run
+        run: sleep 60
+
+      - name: 📥 Download Selenium Test Status
         uses: dawidd6/action-download-artifact@v2
         with:
           name: selenium-test-status
@@ -28,9 +35,9 @@ jobs:
           github_token: ${{ secrets.Access_Token }}
           path: downloaded-status
 
-      - name: ✅ Check test status
+      - name: 🔎 Read status.txt and verify result
         run: |
-          echo "Downloaded status.txt contents:"
+          echo "Selenium test result:"
           cat downloaded-status/status.txt
 
           if grep -q "FAILURE" downloaded-status/status.txt; then
