--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,44 +1,83 @@
-name: Trigger Selenium Tests & Check Status
+name: Multi-Job Selenium Test Workflow
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
 
 jobs:
-  trigger-tests:
+  setup-node:
+    name: 🟢 Setup Node.js
     runs-on: ubuntu-latest
+    outputs:
+      node-folder: ${{ steps.set-output.outputs.node-folder }}
     steps:
-      - name: 🚀 Trigger Selenium Test Workflow
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.Access_Token }}
-          repository: ShubhamK-STPL/my_cicd
-          event-type: run-selenium-tests
+      - name: 📥 Checkout code
+        uses: actions/checkout@v3
 
-  get-status:
-    needs: trigger-tests
+      - name: 🔧 Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: 📦 Install dependencies
+        working-directory: main-app
+        run: npm install
+
+      - name: Set node folder path
+        id: set-output
+        run: echo "node-folder=main-app" >> $GITHUB_OUTPUT
+
+  run-node:
+    name: 🚀 Run Node.js App
     runs-on: ubuntu-latest
+    needs: setup-node
     steps:
-      - name: ⏳ Wait for tests to finish
-        run: sleep 90
+      - name: 📥 Checkout code
+        uses: actions/checkout@v3
 
-      - name: 📥 Try Downloading Selenium Test Status
-        uses: dawidd6/action-download-artifact@v2
-        continue-on-error: true
+      - name: 🔧 Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          name: selenium-test-status
-          path: downloaded-status
-          repo: ShubhamK-STPL/my_cicd
-          branch: main
-          workflow: run-selenium-tests.yml  # Make sure this matches exactly
+          node-version: '20'
 
-      - name: 📖 Show Test Result
-        if: success()
+      - name: 📦 Install dependencies again (required for separate runner)
+        working-directory: main-app
+        run: npm install
+
+      - name: 🟢 Start Node.js app in background
+        working-directory: main-app
         run: |
-          if [ -f "downloaded-status/selenium-test-status.txt" ]; then
-            echo "✅ Selenium Test Status:"
-            cat downloaded-status/selenium-test-status.txt
-          else
-            echo "⚠️ Test result file not found!"
-          fi
+          nohup npm start > app.log 2>&1 &
+          sleep 10
+
+  setup-selenium:
+    name: 🧰 Setup Selenium
+    runs-on: ubuntu-latest
+    needs: run-node
+    steps:
+      - name: 🚀 Pull Selenium Docker
+        run: docker pull selenium/standalone-chrome:latest
+
+      - name: 🧱 Run Selenium in background
+        run: |
+          docker run -d -p 4444:4444 --shm-size=2g selenium/standalone-chrome:latest
+          sleep 10
+
+  run-tests:
+    name: 🧪 Run Selenium Tests
+    runs-on: ubuntu-latest
+    needs: setup-selenium
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v3
+
+      - name: ☕ Set up Java 22
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '22'
+
+      - name: 🔧 Run Maven Selenium tests
+        working-directory: selenium-cicd-tests
+        run: mvn test
