--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,13 +1,12 @@
-name: Multi-Job Selenium Test Workflow
+name: Multi-Job Workflow
 
 on:
   push:
     branches: [ main ]
-  pull_request:
 
 jobs:
-  setup-node:
-    name: 🟢 Setup Node.js
+  setup-and-start-app:
+    name: 🟢 Setup & Start Node App
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout code
@@ -19,56 +18,48 @@ jobs:
           node-version: '20'
 
       - name: 📦 Install dependencies
-        working-directory: ./main-app
         run: npm install
 
-  run-node:
-    name: 🚀 Run Node.js App
-    runs-on: ubuntu-latest
-    needs: setup-node
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v3
-
-      - name: 🔧 Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: 📦 Install dependencies again (new runner)
-        working-directory: ./main-app
-        run: npm install
-
-      - name: 🟢 Start Node.js app in background
-        working-directory: ./main-app
+      - name: 🚀 Start Node.js app in background
         run: |
           nohup npm start > app.log 2>&1 &
           sleep 10
 
-  setup-selenium:
-    name: 🧰 Setup Selenium
+  trigger-selenium:
+    name: 🧪 Trigger Selenium in Other Repo
+    needs: setup-and-start-app
     runs-on: ubuntu-latest
-    needs: run-node
     steps:
-      - name: 🧱 Run Selenium in background
-        run: |
-          docker run -d -p 4444:4444 --shm-size=2g selenium/standalone-chrome:latest
-          sleep 10
-
-  run-tests:
-    name: 🧪 Run Selenium Tests
-    runs-on: ubuntu-latest
-    needs: setup-selenium
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v3
-
-      - name: ☕ Set up Java 22
-        uses: actions/setup-java@v3
+      - name: 🔁 Trigger Selenium Workflow
+        uses: peter-evans/repository-dispatch@v2
         with:
-          distribution: 'temurin'
-          java-version: '22'
+          token: ${{ secrets.ACCESS_TOKEN }}
+          repository: ShubhamK-STPL/my_cicd
+          event-type: run-selenium-tests
 
-      - name: 🔧 Run Maven Selenium tests
-        working-directory: ./selenium-cicd-tests
-        run: mvn test
+  fetch-test-status:
+    name: 📥 Fetch Selenium Test Result
+    needs: trigger-selenium
+    runs-on: ubuntu-latest
+    steps:
+      - name: ⏳ Wait for tests to finish
+        run: sleep 90
+
+      - name: 🧾 Download Result Artifact
+        uses: dawidd6/action-download-artifact@v2
+        continue-on-error: true
+        with:
+          name: selenium-test-status
+          path: downloaded-status
+          repo: OtherUser/selenium-cicd-tests
+          workflow: run-selenium-tests.yml
+          branch: main
+
+      - name: 📖 Show Test Result
+        run: |
+          if [ -f "downloaded-status/selenium-test-status.txt" ]; then
+            echo "✅ Selenium Test Result:"
+            cat downloaded-status/selenium-test-status.txt
+          else
+            echo "⚠️ Test result not found!"
+          fi
